--- a/src/pages/OneClementine/OneClementine.css
+++ b/src/pages/OneClementine/OneClementine.css
@@ -24,24 +24,38 @@ header {
 
 .imgone, .imgtwo{
   width: 50%;
-  height: auto;
 }
 
 .overlay-text {
   position: absolute;
-  top: 50%;
+  top: 46%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   color: #fff;
+  transition: transform 0.3s ease;
+}
+
+.overlay-text:hover{
+  transform: scale(1.4);
 }
 
 .overlay-text h1 {
-  margin: 0;
-  font-size: 2em;
+  font-size: 7em;
+  margin: 0 auto;
 }
 
 .overlay-text p {
   margin: 0;
-  font-size: 1.2em;
+  font-size: 1.4em;
+}
+
+.one {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+.one img {
+  
 }
